<resources>
    <string name="app_name">ZoqueApp</string>
    <string name="title_activity_splash_screen">splashScreen</string>
    <string name="PlaceHolder">placeholder</string>
    <string name="iniciarSesion">Iniciar sesión</string>
    <string name="emailHint">Email</string>
    <string name="contrasenaHint">Contraseña</string>
    <string name="contrasenaOlvidada">¿Olvidaste tu contraseña?</string>
    <string name="recuperarContraseña">¡Recupérala!</string>
    <string name="inicioDeSesion">Inicio de sesión</string>
    <string name="crearCuenta">¿Aun no tienes cuenta?</string>
    <string name="CrearCuentaBoton">¡Crea una!</string>
    <string name="contentDescription2">boton para ocultar la contraseña</string>
    <string name="contentDescription1">boton para ver la contraseña</string>
    <string name="courseTitle">titulo del curso</string>
    <string name="contentDescriptionCardView">imagen del curso a ver</string>
    <string name="headerImage">header</string>
    <string name="courseTitleExplain">Titulo del curso</string>
    <string name="courseExplainExplain">Descripcion</string>
    <string name="categoriaCourseExplain">Categoria</string>
    <string name="goTo">Ir al curso</string>
    <string name="space" />
    <string name="Reward">Rewards</string>
    <string name="buyNow">confirmar compra</string>
    <string name="HomeNavBar">Home</string>
    <string name="storeNavBar">Store</string>
    <string name="MarathonNavBar">Marathon</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="check">Comprueba</string>
    <string name="question">Pregunta</string>
    <string name="correct">Muy bien!</string>
    <string name="incorrect">Incorrecto...</string>
    <string name="next">Siguiente</string>
    <string name="finish">Acaba</string>
    <string name="prev">Anterior</string>
    <string name="results">Resultados</string>
    <string name="start_over">Volver a Empezar</string>

    <array name="all_questions">
        <item>¿como se dice mama en ingles?;mua;dad;*Mom;must</item>
        <item>¿comos se dice papa en ingles? ;dude;*Dad;mom;father</item>
        <item>¿como se dice padre en ingles?;Dad;Mom;*Father;Mother </item>
        <item>¿como se dice madre en ingles?;Dad;Mom;father;*Mother </item>
    </array>


</resources>
