<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cursoDescripcion">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_10sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_200sdp"
                android:background="#2d2d2d"
                android:id="@+id/courseFoto"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tituloCurso"
                android:text="@string/courseTitleExplain"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_18sdp"
                android:fontFamily="@font/gothammedium"
                android:textColor="#2d2d2d"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/categoriaCurso"
                android:text="@string/categoriaCourseExplain"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_16sdp"
                android:fontFamily="@font/gothammedium"
                android:textColor="#2d2d2d"
                android:padding="@dimen/_8sdp"
                android:background="#edecec"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/DescripcionCurso"
                android:text="@string/courseExplainExplain"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_18sdp"
                android:fontFamily="@font/gothammedium"
                android:textColor="#2d2d2d"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goTo"
                android:padding="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_150sdp"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>