<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_quiz"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <TextView
        android:id="@+id/label_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gothamlight"
        android:text="@string/question"
        android:textStyle="bold"
        android:textSize="@dimen/_15sdp"/>

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_question"
        android:textSize="@dimen/_20sdp"
        android:textColor="?android:attr/textColorPrimary"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/gothammedium"
        android:layout_below="@+id/label_question"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <View
        android:id="@+id/ruler"
        android:layout_below="@id/text_question"
        android:layout_marginTop="10dp"
        android:background="#813e3e3e"
        android:layout_height="1dp"
        android:layout_width="match_parent"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ruler"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:id="@+id/answer_group">

        <RadioButton
            android:text="RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/answer1"
            android:layout_weight="1" />

        <RadioButton
            android:text="RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/answer2"
            android:layout_weight="1" />

        <RadioButton
            android:text="RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/answer3"
            android:layout_weight="1" />

        <RadioButton
            android:text="RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/answer4"
            android:layout_weight="1" />
    </RadioGroup>

    <Button
        android:text="@string/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/btn_check"
        android:fontFamily="@font/gothammedium"
        android:textColor="#ffffff"
        />

    <Button
        android:text="@string/prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/btn_prev" />

</RelativeLayout>